methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:43: error: not found: value growFlowers
growFlowers(Color.RED);
^FlowerPot:45: error: not found: value growFlowers
growFlowers(Color.CYAN);
^FlowerPot:47: error: not found: value growFlowers
growFlowers(Color.ORANGE);
^FlowerPot:49: error: not found: value growFlowers
growFlowers(Color.PINK)
^