methods.flowerpot.FlowerPot.scala.code
def growFlower(c:Color){
 setCouleurBrosse(Color.YELLOW)
  baisseBrosse()
  leveBrosse()
  avance()
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
  gauche()
  avance()
  setCouleurBrosse(Color.GREEN)
  baisseBrosse()
  leveBrosse()
  gauche()
  avance()
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
  avance()
  setCouleurBrosse(Color.GREEN)
  baisseBrosse()
  leveBrosse()
  gauche()
  avance()
   setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
  avance()
  setCouleurBrosse(Color.GREEN)
  baisseBrosse()
  leveBrosse()
  gauche()
  avance()
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
  avance()
  setCouleurBrosse(Color.GREEN)
  baisseBrosse()
  leveBrosse()
}
setPos(getX()+1,getY());
growFlowers(Color.RED);
setPos(getX()+3,getY()-1);
growFlowers(Color.CYAN);
setPos(getX()-3,getY()+1);
growFlowers(Color.ORANGE);
setPos(getX()-3,getY()+1);
growFlowers(Color.PINK)
setPos(getX()+3,getY()-1)